--- a/Restaurant Recommendations/View/Base.lproj/Main.storyboard
+++ b/Restaurant Recommendations/View/Base.lproj/Main.storyboard
@@ -17,6 +17,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="backgroundImage" translatesAutoresizingMaskIntoConstraints="NO" id="ozq-fM-IGb">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                            </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="cV5-sl-gZ6">
                                 <rect key="frame" x="40" y="294" width="334" height="139"/>
                                 <subviews>
@@ -51,6 +54,8 @@
                                 <rect key="frame" x="238" y="473" width="76" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="76" id="1EJ-54-d6K"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="76" id="iM2-9S-hNA"/>
+                                    <constraint firstAttribute="height" constant="30" id="oGy-rL-xqj"/>
                                 </constraints>
                                 <state key="normal" title="Sign Up"/>
                                 <connections>
@@ -58,20 +63,35 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6Cs-hZ-EQj">
-                                <rect key="frame" x="100" y="473" width="38" height="30"/>
+                                <rect key="frame" x="100" y="473" width="76" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="4QD-UR-nAb"/>
+                                    <constraint firstAttribute="width" constant="76" id="uwT-3C-dfQ"/>
+                                </constraints>
                                 <state key="normal" title="Login"/>
                                 <connections>
                                     <action selector="onLogin:" destination="BYZ-38-t0r" eventType="touchUpInside" id="EAw-P3-P4d"/>
                                 </connections>
                             </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="zOu-Ty-egb">
+                                <rect key="frame" x="87" y="84" width="240" height="150"/>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="6Cs-hZ-EQj" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="100" id="18e-JT-qEN"/>
+                            <constraint firstAttribute="bottom" secondItem="ozq-fM-IGb" secondAttribute="bottom" id="2AO-EN-RLF"/>
                             <constraint firstItem="6Cs-hZ-EQj" firstAttribute="baseline" secondItem="wpy-Ec-61e" secondAttribute="baseline" id="3gn-Wa-OYB"/>
+                            <constraint firstItem="zOu-Ty-egb" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="40" id="7Zz-3f-x79"/>
+                            <constraint firstItem="ozq-fM-IGb" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="8hU-oC-l6D"/>
+                            <constraint firstItem="ozq-fM-IGb" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="DiS-6S-svw"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="zOu-Ty-egb" secondAttribute="trailing" constant="87" id="EKP-2X-rjx"/>
                             <constraint firstItem="cV5-sl-gZ6" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="250" id="Kg6-nM-8iE"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="wpy-Ec-61e" secondAttribute="trailing" constant="100" id="QTn-BF-7cf"/>
+                            <constraint firstItem="zOu-Ty-egb" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="87" id="V2R-xC-re9"/>
+                            <constraint firstItem="ozq-fM-IGb" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="X12-Z7-JOs"/>
+                            <constraint firstItem="cV5-sl-gZ6" firstAttribute="top" secondItem="zOu-Ty-egb" secondAttribute="bottom" constant="60" id="aqP-WF-ZTA"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="cV5-sl-gZ6" secondAttribute="trailing" constant="40" id="lcc-Sa-gw1"/>
                             <constraint firstItem="6Cs-hZ-EQj" firstAttribute="top" secondItem="cV5-sl-gZ6" secondAttribute="bottom" constant="40" id="mVB-5i-4Tq"/>
                             <constraint firstItem="cV5-sl-gZ6" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="40" id="tgM-p5-vgh"/>
@@ -1004,7 +1024,9 @@
         </scene>
     </scenes>
     <resources>
+        <image name="backgroundImage" width="174" height="177"/>
         <image name="house" catalog="system" width="128" height="106"/>
+        <image name="logo" width="139.33332824707031" height="56"/>
         <image name="person" catalog="system" width="128" height="117"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
